# feishu-task-cli

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml
.github/workflows/: ci.yml  codeql.yml  dependency-review.yml  release.yml
docs/: agent-installation.md  agent-protocol.md  architecture.md  behavior-inventory.md  release-process.md  repository-metadata.md
docs/superpowers/plans/: 2026-07-15-feishu-task-cli-implementation.md  2026-07-16-agent-onboarding-discovery.md
docs/superpowers/specs/: 2026-07-15-feishu-task-cli-design.md  2026-07-16-agent-onboarding-discovery-design.md
schemas/: plan-v1.json  policy-v1.json  receipt-v1.json  review-v1.json
scripts/: privacy_scan.py  verify_release_tag.sh
src/feishu_task_cli/: __init__.py  __main__.py  cli.py  errors.py
src/feishu_task_cli/application/: __init__.py  executor.py  planner.py  policy_engine.py  reconcile.py  reviewer.py
src/feishu_task_cli/artifacts/: __init__.py  base.py  canonical.py  plan.py  policy.py  receipt.py  (+4 more)
tests/contract/: test_agent_onboarding.py  test_cli_end_to_end.py  test_cli_review.py  test_package.py  test_privacy_scan.py  test_public_boundary.py  test_release_checksums.py  test_release_metadata.py  test_release_tag_verifier.py  test_schemas.py
tests/fixtures/: feishu_oauth_v2_token.json
tests/golden/: artifact-vectors.json  hash-vectors.json  receipt-partial.md  receipt-verified.md
tests/integration/: test_execution_failures.py  test_execution_locking.py  test_oauth.py  test_redaction.py  test_task_get.py  test_task_mutations.py
tests/unit/: test_cli_output_safety.py
(+26 files in other folders)
